"Fix" overlapping on sidebar

--- a/webui/react/src/components/NavigationSideBar.module.scss
+++ b/webui/react/src/components/NavigationSideBar.module.scss
@@ -32,6 +32,7 @@
     flex-direction: column;
     flex-grow: 1;
     min-height: 0;
+    overflow: hidden;
 
     .noWorkspaces {
       align-self: center;
